[tool.poetry]
name = "dashcamtools"
version = "0.1.0"
description = "Dashcam Tools"
authors = ["Hoarders"]
readme = "README.md"

# [tool.poetry.scripts]
# TODO: 全動画の作成日時
# TODO: 全動画のコピー処理
# TODO: 動画のコピー、変換、アップロード、削除

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
